@@ -22,6 +22,7 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.StreamSupport;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 
@@ -32,8 +33,11 @@ import org.springframework.util.Assert;
  * Value object to bind Vault HTTP Token API requests.
  *
  * @author Mark Paluch
+ * @author Nanne Baars
  */
 public class VaultTokenRequest {
+
+	private static final VaultTokenRequest EMPTY = VaultTokenRequest.builder().build();
 
 	@Nullable
 	private final String id;
@@ -60,12 +64,15 @@ public class VaultTokenRequest {
 	@JsonProperty("display_name")
 	private final String displayName;
 
+	@JsonProperty("entity_alias")
+	private final String entityAlias;
+
 	@JsonProperty("num_uses")
 	private final int numUses;
 
 	VaultTokenRequest(@Nullable String id, List<String> policies, Map<String, String> meta, boolean noParent,
 			boolean noDefaultPolicy, boolean renewable, @Nullable String ttl, @Nullable String explicitMaxTtl,
-			String displayName, int numUses) {
+			String displayName, String entityAlias, int numUses) {
 
 		this.id = id;
 		this.policies = policies;
@@ -77,6 +84,7 @@ public class VaultTokenRequest {
 		this.explicitMaxTtl = explicitMaxTtl;
 		this.displayName = displayName;
 		this.numUses = numUses;
+		this.entityAlias = entityAlias;
 	}
 
 	/**
@@ -84,6 +92,14 @@ public class VaultTokenRequest {
 	 */
 	public static VaultTokenRequestBuilder builder() {
 		return new VaultTokenRequestBuilder();
+	}
+
+	/**
+	 * @return an empty token request.
+	 * @since 3.1
+	 */
+	public static VaultTokenRequest empty() {
+		return EMPTY;
 	}
 
 	/**
@@ -154,6 +170,15 @@ public class VaultTokenRequest {
 	}
 
 	/**
+	 * @return then name of the entity alias to associate with during token creation. Only
+	 * works in combination with role name.
+	 * @since 3.1
+	 */
+	public String getEntityAlias() {
+		return this.entityAlias;
+	}
+
+	/**
 	 * @return the number of allowed token uses.
 	 */
 	public int getNumUses() {
@@ -186,15 +211,18 @@ public class VaultTokenRequest {
 
 		private String displayName = "";
 
+		@Nullable
+		private String entityAlias;
+
 		private int numUses;
 
 		VaultTokenRequestBuilder() {
 		}
 
 		/**
-		 * Configure a the Id of the client token. Can only be specified by a root token.
-		 * Otherwise, the token Id is a randomly generated UUID.
-		 * @param id the token Id.
+		 * Configure the token identifier. Can only be specified by a root token.
+		 * Otherwise, the token identifier is a randomly generated UUID.
+		 * @param id the token identifier.
 		 * @return {@code this} {@link VaultTokenRequestBuilder}.
 		 */
 		public VaultTokenRequestBuilder id(String id) {
@@ -371,6 +399,33 @@ public class VaultTokenRequest {
 		}
 
 		/**
+		 * Configure a display name for the token, defaults to "token".
+		 * @param displayName must not be empty or {@literal null}.
+		 * @return {@code this} {@link VaultTokenRequestBuilder}.
+		 */
+		public VaultTokenRequestBuilder displayName(String displayName) {
+
+			Assert.hasText(displayName, "Display name must not be empty");
+
+			this.displayName = displayName;
+			return this;
+		}
+
+		/**
+		 * Configure the entity alias for the token.
+		 * @param entityAlias must not be empty or {@literal null}.
+		 * @return {@code this} {@link VaultTokenRequestBuilder}.
+		 * @since 3.1
+		 */
+		public VaultTokenRequestBuilder entityAlias(String entityAlias) {
+
+			Assert.hasText(entityAlias, "Entity alias must not be empty");
+
+			this.entityAlias = entityAlias;
+			return this;
+		}
+
+		/**
 		 * Configure the maximum uses for the token. This can be used to create a
 		 * one-time-token or limited use token. Defaults to {@literal 0}, which has no
 		 * limit to the number of uses.
@@ -386,57 +441,26 @@ public class VaultTokenRequest {
 		}
 
 		/**
-		 * Configure a display name for the token, defaults to "token".
-		 * @param displayName must not be empty or {@literal null}.
-		 * @return {@code this} {@link VaultTokenRequestBuilder}.
-		 */
-		public VaultTokenRequestBuilder displayName(String displayName) {
-
-			Assert.hasText(displayName, "Display name must not be empty");
-
-			this.displayName = displayName;
-			return this;
-		}
-
-		/**
 		 * Build a new {@link VaultTokenRequest} instance.
 		 * @return a new {@link VaultCertificateRequest}.
 		 */
 		public VaultTokenRequest build() {
 
-			List<String> policies;
-			switch (this.policies.size()) {
-				case 0:
-					policies = Collections.emptyList();
-					break;
-				case 1:
-					policies = Collections.singletonList(this.policies.get(0));
-					break;
-				default:
-					policies = Collections.unmodifiableList(new ArrayList<>(this.policies));
+			List<String> policies = switch (this.policies.size()) {
+				case 0 -> List.of();
+				case 1 -> List.of(this.policies.get(0));
+				default -> List.copyOf(this.policies);
+			};
 
-			}
-			Map<String, String> meta;
-			switch (this.meta.size()) {
-				case 0:
-					meta = Collections.emptyMap();
-					break;
-				default:
-					meta = Collections.unmodifiableMap(new LinkedHashMap<>(this.meta));
-			}
+			Map<String, String> meta = this.meta.isEmpty() ? Map.of()
+					: Collections.unmodifiableMap(new LinkedHashMap<>(this.meta));
 
 			return new VaultTokenRequest(this.id, policies, meta, this.noParent, this.noDefaultPolicy, this.renewable,
-					this.ttl, this.explicitMaxTtl, this.displayName, this.numUses);
+					this.ttl, this.explicitMaxTtl, this.displayName, this.entityAlias, this.numUses);
 		}
 
 		private static <E> List<E> toList(Iterable<E> iter) {
-
-			List<E> list = new ArrayList<>();
-			for (E item : iter) {
-				list.add(item);
-			}
-
-			return list;
+			return StreamSupport.stream(iter.spliterator(), false).toList();
 		}
 
 	}
